--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ ipykernel = "^6.22.0"
 ipywidgets = "^8.0.6"
 torch = "^2.0.0"
 black = "^23.3.0"
+scikit-learn = "^1.2.2"
+pandas = "^1.5.3"
 
 
 [build-system]
