hopefully working model

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,13 @@ torch = "^2.0.0"
 black = "^23.3.0"
 scikit-learn = "^1.2.2"
 pandas = "^1.5.3"
+torchvision = "^0.15.1"
+tensorboard = "^2.12.1"
+torch-tb-profiler = "^0.4.1"
+nltk = "^3.8.1"
+tqdm = "^4.65.0"
+datasets = "^2.11.0"
+wandb = "^0.14.0"
 
 
 [build-system]
